WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303796
Unreviewed, insert exception check explicitly in JSBigInt::createFrom
https://bugs.webkit.org/show_bug.cgi?id=303796
Summary
Unreviewed, insert exception check explicitly in JSBigInt::createFrom
Yusuke Suzuki
Reported
2025-12-08 17:29:56 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-08 17:30:04 PST
<
rdar://problem/166102722
>
Yusuke Suzuki
Comment 2
2025-12-08 17:31:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55072
EWS
Comment 3
2025-12-08 17:34:30 PST
Committed
304134@main
(f08d11d47a6f): <
https://commits.webkit.org/304134@main
> Reviewed commits have been landed. Closing PR #55072 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug