Unreviewed, insert exception check explicitly in JSBigInt::createFrom https://bugs.webkit.org/show_bug.cgi?id=303796 rdar://166102722

* Source/JavaScriptCore/runtime/JSBigInt.cpp:
(JSC::JSBigInt::createFrom):

Canonical link: https://commits.webkit.org/304134@main